--- a/ProyectoISW/ProyectoISW.csproj
+++ b/ProyectoISW/ProyectoISW.csproj
@@ -145,6 +145,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegistrosDom.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RegistrosDom.Designer.cs">
+      <DependentUpon>RegistrosDom.cs</DependentUpon>
+    </Compile>
+    <Compile Include="RegistrosFaltas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RegistrosFaltas.Designer.cs">
+      <DependentUpon>RegistrosFaltas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Registros.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -181,6 +193,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RegistrosDom.resx">
+      <DependentUpon>RegistrosDom.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RegistrosFaltas.resx">
+      <DependentUpon>RegistrosFaltas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Registros.resx">
       <DependentUpon>Registros.cs</DependentUpon>
     </EmbeddedResource>
